commit small change to pull with rebase

--- a/ldo-mc-vr.tex
+++ b/ldo-mc-vr.tex
@@ -357,7 +357,7 @@ set as
 \bo_n\cdot\nabla\psi_{n}(\vecr,E) + 
 \Sigma_{t}(\vecr,E)\psi_{n}(\vecr,E) = \\
 \int_0^\infty\sum_{m=1}^{N}\sum_{n'=1}^{N}\langle L_{n'},L_{m}\rangle
-\Sigma_{s,L}(\vecr,E'\rightarrow E)(\bo_{m}\cdot\bo_n)\psi_{n'}(E')dE'
+\Sigma_{s,L}(\vecr,E'\rightarrow E,\bo_{m}\cdot\bo_n)\psi_{n'}(E')dE'
 + Q_{n}(E),
 \end{multline}
 %
